--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <div>
-            <img src="img/white.png" width=132>
+            <img src="img/white.png" width="125">
         </div>
 
         <div>
@@ -47,7 +47,7 @@
             <div class="footer-menu">
                 <div class="first-box">
                     <div>
-                        <img src="img/white.png" width=132>
+                        <img src="img/white.png" width="125">
                     </div>
                     <div class="column">
 
